Fix issues: Overflow search button on small screens, remove inline css

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -271,6 +271,3 @@ footer .para p {
   background-color: #d35266;
 }
 
-.class-flex {
-  display: flex;
-}
